# trellonotify

./: .gitignore  AUTHORS  CONTRIBUTORS  HACKING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  create_changelog  trellonotify.in
src/: Makefile.am  notifier.py
src/db/: Makefile.am  entities.py
src/gui/: Makefile.am  notification.py  oauth_view.py  oauth_window.py
src/lib/: Makefile.am  common.py  dal.py  defs.py.in
src/lib/trello/: __init__.py  base.py  exceptions.py  fields.py  models.py  providers.py  trello.py  utils.py
